instance1/temp-retrieve/objects/Commission_Rule__c/fields/Commission_Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rule_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Plan</label>
    <referenceTo>Commission_Rule_Group__c</referenceTo>
    <relationshipLabel>Commission Rules</relationshipLabel>
    <relationshipName>Commission_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>