instance1/temp-retrieve/objects/Commission_Rule__c/fields/Minimum_Sale_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Sale_Total_Value__c</fullName>
    <description>This will be used to create the different tiers of commission.</description>
    <inlineHelpText>This will be the minimum sale total value to enter this tier.</inlineHelpText>
    <label>Minimum Sale Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>