instance1/temp-retrieve/objects/Commission_Rule__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>When there is a product family selected this means they are commissionable.</description>
    <inlineHelpText>When there is a product family selected this means they are commissionable.</inlineHelpText>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>