instance1/temp-retrieve/objects/Commission_Rule__c/validationRules/Maximum_Sale_Total_Value_cant_be_lower.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Sale_Total_Value_cant_be_lower</fullName>
    <active>true</active>
    <description>Maximum Sale Total Value can’t be lower than Minimum Sale Total Value</description>
    <errorConditionFormula>Maximum_Sale_Total_Value__c  &lt;  Minimum_Sale_Total_Value__c</errorConditionFormula>
    <errorDisplayField>Maximum_Sale_Total_Value__c</errorDisplayField>
    <errorMessage>Maximum Sale Total Value can’t be lower than Minimum Sale Total Value</errorMessage>
</ValidationRule>