instance1/temp-retrieve/objects/Commission_Rule__c/validationRules/MaxValueMustBeGreaterThanMinOrNull.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxValueMustBeGreaterThanMinOrNull</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Maximum_Sale_Total_Value__c &lt;=  Minimum_Sale_Total_Value__c , True, False)</errorConditionFormula>
    <errorDisplayField>Maximum_Sale_Total_Value__c</errorDisplayField>
    <errorMessage>The Maximum Value cannot be less than or equal to the Minimum Value</errorMessage>
</ValidationRule>