instance1/temp-retrieve/objects/Commission_Rule__c/listViews/All_Commission_Rules.listView-meta.xml
<ListView>
    <fullName>All_Commission_Rules</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Commission_Percent__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Minimum_Sale_Total_Value__c</columns>
    <columns>Maximum_Sale_Total_Value__c</columns>
    <columns>Product_Family__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Commission Rules</label>
</ListView>